[package]
name = "http-types-ext"
version = "0.1.0"
authors = ["Ismail Gjevori <isgjevori@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "2.5.0"
validator = "0.11.0"
serde = "1.0.114"
async-trait = "0.1.41"
tide = "0.14.0"
serde_json = "^1"
